delete some files

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   Explore our interactive graph to see how breast cancer scientists work. Learn about their knowledge,
                   the data they use, and the <a href="https://bridge2ai.org/"
                     style="text-decoration:none; color:#FFA15A;">
-                    <b>Bridge2AI</b></a> scientists leading the way.
+                    <b>Bridge2AI</b></a> scientists leading the way. Use wide screen devices to get the best user experience.
                 </p>
                 <p class="text">
                   We use <a href="https://dl.acm.org/doi/pdf/10.1145/3292500.3330961"
