--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="banner-table flex-column">
             <div class="flex-row">
               <div class="flex-item flex-column">
-                <h2 class="add-top-margin-small">Breast Cancer Area: Scientists with Datasets. &nbsp;<a
+                <h2 class="add-top-margin-small">Breast Cancer Area: Scientists with Datasets. &nbsp; (Use wide screen devices to get the best user experience ! ) <a
                     href="https://github.com/jiaweixu98/ScientistsWithDatasets"
                     style="text-decoration:none;font-size:15px;color:#ffffff;"> <b>
                       <i class="fa fa-github"></i> Github repository </b>
@@ -47,7 +47,7 @@
                   Explore our interactive graph to see how breast cancer scientists work. Learn about their knowledge,
                   the data they use, and the <a href="https://bridge2ai.org/"
                     style="text-decoration:none; color:#FFA15A;">
-                    <b>Bridge2AI</b></a> scientists leading the way. Use wide screen devices to get the best user experience.
+                    <b>Bridge2AI</b></a> scientists leading the way.
                 </p>
                 <p class="text">
                   We use <a href="https://dl.acm.org/doi/pdf/10.1145/3292500.3330961"
@@ -207,9 +207,9 @@
       <div class="flex-item flex-column">
         <h2>Contact</h2>
         <p class="text add-bottom-margin-large">
-          Any question? Feel free to send us an email or look at the <a href="https://github.com/jiaweixu98/ScientistsWithDatasets"
+          Any question? Look at the <a href="https://github.com/jiaweixu98/ScientistsWithDatasets"
             style="text-decoration:none;font-size:15px;color:#ffffff;"> <b>
-              <i class="fa fa-github"></i> Github repository </b> first.
+              <i class="fa fa-github"></i> Github repository </b> for more information.
           </a>
         </p>
       </div>
